Deleted startup without script.
It slowly trims memory from server, has a low chance to work and other
problems if you are using command line parameters to start minecraft
server.