@@ -1,9 +1,6 @@
 package autosave;
 
 import java.io.File;
-import java.nio.charset.Charset;
-
-import org.bukkit.Bukkit;
 
 public class JVMshutdownhook extends Thread {
 
@@ -26,18 +23,8 @@ public class JVMshutdownhook extends Thread {
 			Runtime.getRuntime().exec(restartscript.getCanonicalPath());
 		}
 		} else {
-		System.out.println("[AutoSaveWorld] Startup script not found. Trying to start without it. This may work strange or not work at all");
-		String processname = new File(Bukkit.class.getProtectionDomain().getCodeSource().getLocation().toURI()).getName();
-		String memory = Runtime.getRuntime().maxMemory()/1024/1024+"M";
-		String encoding = Charset.defaultCharset().toString();
-		String runcommand = "java -server -Xmx"+memory+" -XX:+UseBiasedLocking -XX:+AggressiveOpts -XX:+UseStringCache -XX:+UseFastAccessorMethods -Dfile.encoding="+encoding+" -jar "+processname;
-		String OS = System.getProperty("os.name").toLowerCase();
-		if (OS.contains("win")) {
-			Runtime.getRuntime().exec("cmd /c start " + runcommand);
-		} else {
-			Runtime.getRuntime().exec(new String[]{"/bin/bash","-c","cd "+new File(".").getCanonicalPath()}+" & "+runcommand);
-		}
-		}
+		System.out.println("[AutoSaveWorld] Startup script not found. Restart failed");
+	}
 	} catch (Exception e)
 	{System.out.println("[AutoSaveWorld] Restart failed");
 	e.printStackTrace();}
